--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input name="prodName" type="text" class="input" placeholder="Product Name">
 
                 <span class="split">
-                    <select class="input" name="route">
+                    <!-- <select class="input" name="route">
                         <option value="">Route</option>
                         <option value="North West">North West</option>
                         <option value="Texas">Texas</option>
@@ -36,7 +36,8 @@
                         <option value="East Coast">East Coast</option>
                         <option value="Chicago">Chicago</option>
                         <option value="Extended">Extended</option>
-                    </select>
+                    </select> -->
+                    <input type="text" class="input" name="notes" placeholder="Product Notes* (optional)">
                     <select class="input" name="Qty">
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -100,9 +101,8 @@
             </div>
         </aside>
 
-        <aside id="right">
+        <aside id="right" class="active">
             <article class="pdf">
-                <img class="logo" src="./assets/imgs/logo.png" alt="" srcset="">
                 <span id="custName"> Customer Name </span>
                 <strong>
                     <span id="invoice"> Invoice # </span>
