--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 <body>
-    <main>
+    <main class="maker">
         <aside id="left">
             <img class="logo" src="./assets/imgs/logo.png" alt="" srcset="">
             <form class="form">
@@ -101,7 +101,7 @@
             </div>
         </aside>
 
-        <aside id="right" class="active">
+        <aside id="right" >
             <article class="pdf">
                 <span id="custName"> Customer Name </span>
                 <strong>
